# bookManagment

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
backend/apps/books/: models.py  serializers.py  urls.py  views.py
backend/apps/books/migrations/: 0001_initial.py  0002_alter_bookmodel_isbn.py  0003_alter_bookmodel_table.py  0004_alter_bookmodel_publisher.py  0005_alter_bookmodel_isbn_alter_bookmodel_author_and_more.py  0006_alter_bookmodel_options.py  0007_alter_bookmodel_author_alter_bookmodel_name.py  0008_alter_bookmodel_author_alter_bookmodel_name.py  0009_alter_bookmodel_isbn_alter_bookmodel_author_and_more.py  0010_alter_bookmodel_isbn_alter_bookmodel_author.py  0011_rename_publisher_bookmodel_published.py
backend/apps/books/tests/: test_create.py
backend/configs/: settings.py  urls.py
backend/configs/extra_conf/: drf_yasg_conf.py  rest_conf.py
backend/core/: pagination.py
backend/core/enums/: regex_enum.py
backend/core/management/commands/: wait_db.py
client/: asset-manifest.json  index.html
client/static/js/: main.9281a27f.js  main.9281a27f.js.map
frontend/: package-lock.json  package.json
frontend/src/: App.js
